--- a/scss/_user-center.scss
+++ b/scss/_user-center.scss
@@ -140,9 +140,10 @@ scss design by heixaobo  qq:9304600
     }
 }
 .list-block .item-title.label{
-    width: 20%;
+    width: 25%;
 }
 .row-tit{
+    color: #9e9393;
     padding-left: 0.55rem;line-height: 1.5rem;margin-top: 1.5rem ;
 }
 .input-tip{
