--- a/scss/_user-center.scss
+++ b/scss/_user-center.scss
@@ -163,7 +163,9 @@ scss design by heixaobo  qq:9304600
     li{
         padding-left: 0.5rem;
         margin-bottom:0.3rem;
-        background-color: #fff;
+    }
+    .item-content{
+        background: transparent;
     }
 }
 
