--- a/scss/mobile.scss
+++ b/scss/mobile.scss
@@ -2087,3 +2087,16 @@ input:-ms-input-placeholder, textarea:-ms-input-placeholder {
     color: $placeholderColor;
     font-size: $placeholderFontSize;
 }
+
+//toast 改
+.toast {
+    height: inherit;
+    padding: 0.5rem 0.8rem;
+    font-size: .8rem;
+    line-height: 1.3rem;
+    width: 90%;
+    @include transform(translate(-10%,0));
+    color: white;
+    background: rgba(152,46,48, 0.90);
+    border-radius: 3rem;
+}
