--- a/scss/mobile.scss
+++ b/scss/mobile.scss
@@ -1189,24 +1189,43 @@ ol{
         padding-top: .5rem;
         padding-bottom: .5rem;
     }
+    select{
+        height: $input-height;
+        border-radius: 24px;
+        margin-bottom: .5rem;
+        font-size: 16px;
+        outline: none;
+        border: 0;
+        color: #fff;
+        background: rgba(255,255,255,0.1);
+        -webkit-appearance:none;
+        option{
+            text-align: left;
+            padding-left: 10px;
+        }
+    }
     .login-input{
-        border:none;
-        border-radius: 6px;
+        border-radius: 24px;
+        font-size: 16px;
+        outline: none;
+        border: 0;
         width: 100%;
         margin-bottom: .5rem;
         @include box-shadow(0 0 12px rgba(164,106,24,.25));
-        padding-left: 30px;
+        padding-left: 40px;
         height:$input-height;
         line-height:$input-height - 0.8;
         padding-top: .4rem;
+        color: #fff;
         padding-bottom: .4rem;
-        background: image_url("icon-user.png") rgba(255,255,255,1) 4px center  no-repeat;
+        background: image_url("icon-user.png") rgba(255,255,255,0.1) 10px center  no-repeat;
+        -webkit-appearance:none;
         @include background-size(.8rem);
         &.yzm-input{
             width: 60%;
             float: left;
             padding-left: 10px;
-            background: rgba(255,255,255,1);
+            background: rgba(255,255,255,0.1);
         }
     }
 
@@ -1230,6 +1249,18 @@ ol{
         &:active{
             background:lighten($btn-bg,10%);
         }
+    }
+
+    #getSMS{
+        position: absolute;
+        right: 3px;top: 4px;
+        background-color: #f68219;
+        color: #fff;border-radius: 6px;padding: 6px 10px;
+        border: 0;
+    }
+    #getSMS[disabled]{
+        background-color: #ccc;
+        color: #666;
     }
 
 }
