feat: help center

--- a/scss/mobile.scss
+++ b/scss/mobile.scss
@@ -6,7 +6,7 @@ scss design by heixaobo  qq:9304600
 @import "compass", "normalize", "compass/support", "compass/css3", "compass/utilities";
 @import  "retina-sprites","mixin","global-variable";
 @import "p_menu";
-@import "language", "user-center";
+@import "language", "user-center", "help";
 
 
 a {
