--- a/scss/mobile.scss
+++ b/scss/mobile.scss
@@ -1043,6 +1043,34 @@ ol{
     }
     margin-bottom: 1rem;
 }
+
+.cards-header-only {
+    .card {
+        .card-header {
+            border: none;
+            label {
+                width: 100%;
+                @include display-flex();
+                span {
+                    width: 100%;
+                    position: relative;
+                }
+            }
+            input[type='radio']:checked ~ span {
+                &:after {
+                    content: "\f00c";
+                    font-family: 'FontAwesome';
+                    font-size: 24px;
+                    color: #4bc010;
+                    position: absolute;
+                    right: 0;
+                    top: -1px;
+                }
+            }
+        }
+    }
+}
+
 .card {
     background: #fff;
     box-shadow: 0 0 1rem rgba(156, 115, 24, 0.2);
