--- a/scss/_p_menu.scss
+++ b/scss/_p_menu.scss
@@ -1,7 +1,7 @@
 
 @charset "UTF-8";
 /*!
-scss design by heixaobo  qq:9304600
+scss design by
 */
 
 @import "compass", "normalize", "compass/support", "compass/css3", "compass/utilities";
