--- a/scss/_user-center.scss
+++ b/scss/_user-center.scss
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 /*!
-scss design by heixaobo  qq:9304600
+scss design by
 */
 @import "compass", "normalize", "compass/support", "compass/css3", "compass/utilities";
 @import  "retina-sprites","global-variable" ;
