--- a/scss/mall.scss
+++ b/scss/mall.scss
@@ -220,7 +220,7 @@ body{
                     font-size: 14px;
                     padding: 10px;
                     display: block;
-                    @include ellipsis();
+                    //@include ellipsis();
                     color: #333;
                 }
 
